break source lines at <80 chars
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@117 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/doc/tex4ht-annotated-source.tex
+++ b/doc/tex4ht-annotated-source.tex
@@ -200,7 +200,7 @@ Our custom configuation ends here if you do not want to make use of
 the free web font, namely, EB Garamond created by
 \hlink{http://www.georgduffner.at/ebgaramond/impressum.html}{Georg
   Duffner} and distributed under
-\hlink{http://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL}{\textsm{OFL}}
+\hlink{http://scripts.sil.org/OFL}{\textsm{OFL}}
 font licence.  The font can be had from Google or from
 \hlink{http://www.georgduffner.at/ebgaramond/}{here}.  The succeeding
 lines are \verb'.css' declarations to make use of Garamond and
