--- a/doc/tex4ht-configure1.tex
+++ b/doc/tex4ht-configure1.tex
@@ -83,8 +83,9 @@ of the \latex commands popularly used in documents.
  \Configure{ext}............1
 \end{verbatim}
 \begin{tabular}{ll}
-\fline\#1: default extension name for target files  (recorded in \Verb+\:html+).
-Can also be requested through a command line option \Verb+ext=...+\par
+\fline\#1: default extension name for target files (recorded in
+\Verb+\:html+).  Can also be requested through a command line option
+\Verb+ext=...+\par
 
 \end{tabular}
 \begin{verbatim}
@@ -410,7 +411,8 @@ a \Verb=jobname.4tc= file.
 \end{tabular}
 \begin{itemize}
 \item Empty arguments request the omission of the corresponding field.
-\item \Verb=\TocCount=  Specifies the entry count withing the \Verb= jobname.4tc= file.
+\item \Verb=\TocCount=  Specifies the entry count within the
+  \Verb= jobname.4tc= file.
 \item  \Verb=\TitleCount= Count of entries submitted to the toc file.
 \item An alternative to \Verb=\ConfigureToc{unit-name}=:
 \end{itemize}
@@ -677,7 +679,8 @@ The content to be displayed in the pointers.
 
 \fline   \#2 content at the start indented paragraphs
 
-\fline   \#3 insertion into \Verb=\EndP=, at the start of non-indented paragraphs
+\fline   \#3 insertion into \Verb=\EndP=, at the start of non-indented
+paragraphs
 
 \fline   \#4 insertion into \Verb=\EndP=, at the start of indented paragraphs
 
