--- a/doc/tex4ht-configure2.tex
+++ b/doc/tex4ht-configure2.tex
@@ -118,9 +118,9 @@
 
 \begin{tabular}{ll}
 
-\fline   \#1 names cross-references of files (appends \#1 to \Verb=)F= and \Verb=)Q=
-      entries of the \Verb=.xref= files). Applicable mainly implicitly
-      within \Verb=\Link= commands.
+\fline \#1 names cross-references of files (appends \#1 to \Verb=)F= and
+      \Verb=)Q= entries of the \Verb=.xref= files). Applicable mainly
+      implicitly within \Verb=\Link= commands.
 
 \end{tabular}
 
