\% not % in tex4ht css
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@120 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,7 +1,14 @@
+2014-02-21  Karl Berry  <karl@gnu.org>
+
+	* tex4ht-html4.tex (font-size): need \%, not %, for the 70%.
+	Found by Raphael Pinson, http://puszcza.gnu.org.ua/bugs/?189.
+
 2014-02-10  Karl Berry  <karl@gnu.org>
 
 	* tex4ht-env.tex: use gs instead of convert for making bitmaps
-	(from dick, + notes)
+	(from dick, + notes).
+	
+	* tex4ht-env.tex: use %%~ or ~ instead of hardwired gurari dir.
 
 2013-10-07  Karl Berry  <karl@gnu.org>
 
