--- a/lit/tex4ht-html4.tex
+++ b/lit/tex4ht-html4.tex
@@ -4,7 +4,7 @@
 % Copy html4.4ht into the work directory before each of the 
 %            first two compilations
 %
-% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 2009-2010, 2014 TeX Users Group
 % Copyright (C) 1996-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -17428,7 +17428,7 @@ superscripts doesn't show in the html output.
 \Configure{frenchup}{\HCode{<sup class="french">}}{\HCode{</sup>}}
 \Css{sup.french{
 vertical-align:super;
-font-size:70%;
+font-size:70\%;
 }}
 \renewcommand\fup[1]{\a:frenchup#1\b:frenchup} 
 >>>
