url.4ht: need previous definition of \set@mathnolig from url.sty
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@121 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,9 @@
+2014-05-22  Karl Berry  <karl@gnu.org>
+
+	* tex4ht-4ht.tex (shared url): must use definition
+	of \set@mathnolig from previous url.sty, since we must
+	use literal _ rather than \sb for tex4ht.  (From CVR.)
+
 2014-02-21  Karl Berry  <karl@gnu.org>
 
 	* tex4ht-html4.tex (font-size): need \%, not %, for the 70%.
