(*noncjk.tex): lm-htf.tex created, not cmtex.htf
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@122 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,9 @@
+2014-06-26  Karl Berry  <karl@gnu.org>
+
+	* Makefile (tex4ht_fonts_noncjk_derived): evidently lm-htf.tex
+	is created from tex4ht-fonts-noncjk.tex, but not cmtex.htf.
+	Don't see where/how cmtex.htf is created.
+
 2014-05-22  Karl Berry  <karl@gnu.org>
 
 	* tex4ht-4ht.tex (shared url): must use definition
