copyright years and notices
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@124 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/tex4ht-mathltx.tex
+++ b/lit/tex4ht-mathltx.tex
@@ -2,8 +2,8 @@
 % compile 3 times: latex tex4ht-mathltx
 %           or   xhlatex tex4ht-mathltx "html,3,sections+"
 %
-% Copyright (C) 2009-2010 TeX Users Group
-% Copyright (C) 2005-2009 Eitan M. Gurari
+% Copyright 2009-2014 TeX Users Group
+% Copyright 2005-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -17,6 +17,7 @@
 
 \input{common-code}
 \input{common}
+\input{tex4ht-cpright}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Constructs}
@@ -387,15 +388,15 @@ display="inline"
 
 \<mathltx\><<<
 % mathltx.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009-2010 TeX Users Group
-% Copyright (C) |CopyYear.2005. Eitan M. Gurari
+% Copyright 2009-2014 TeX Users Group
+% Copyright |CopyYear.2005. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
 
 \<html-mltx\><<<
 % html-mltx.4ht (|version), generated from |jobname.tex
-% Copyright (C) 2009-2010 TeX Users Group
-% Copyright (C) |CopyYear.2005. Eitan M. Gurari
+% Copyright 2009-2014 TeX Users Group
+% Copyright |CopyYear.2005. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
 
