--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,9 @@
+2014-06-27  Karl Berry  <karl@gnu.org>
+
+	* tex4ht-fonts-noncjk.tex,
+	* tex4ht-mathltx.tex,
+	* tex4ht-mathml.tex: copyright years and notices.
+
 2014-06-26  Chris Horler  <cshorler@googlemail.com>
 
 	* tex4ht-mathltx.tex,
