--- a/lit/tex4ht-cpright.tex
+++ b/lit/tex4ht-cpright.tex
@@ -18,7 +18,8 @@
 
 % License text + \write to log file.
 \<TeX4ht copywrite\><<<
-|<TeX4ht copyright|>\immediate\write-1{version |version}
+|<TeX4ht copyright|>
+\immediate\write-1{version |version}
 >>>
 
 % Two additional copies in tex4ht-mkht.tex.
