mwbk: omit error if not in vmode
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@125 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,5 +1,11 @@
 2014-06-27  Karl Berry  <karl@gnu.org>
 
+	* tex4ht-4ht.tex (mwcls divs): omit error if not in vertical mode
+	in mwbk.cls. Report from Sylwester Arabas, fix from Deimantas Galcius.
+	http://puszcza.gnu.org.ua/bugs/?214
+
+2014-06-27  Karl Berry  <karl@gnu.org>
+
 	* tex4ht-fonts-noncjk.tex,
 	* tex4ht-mathltx.tex,
 	* tex4ht-mathml.tex: copyright years and notices.
