--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -1,9 +1,10 @@
+% $Id$
 % tex tex4ht-4ht   or   ht tex tex4ht-4ht
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % tex4ht-4ht.tex                                         
-% Copyright (C) 2009-2014             TeX Users Group    
-%               1996-2009             Eitan M. Gurari    
+% Copyright 2009-2014             TeX Users Group    
+%           1996-2009             Eitan M. Gurari    
 %                                                        
 % This work may be distributed and/or modified under the 
 % conditions of the LaTeX Project Public License, either 
@@ -15935,6 +15936,11 @@ UnDFexyz}%
 \Hinput{mwart}
 \endinput
 >>>        \AddFile{7}{mwart}
+
+\<mwcls divs\><<<
+\let\:o:mw@normalheading\mw@normalheading
+\pend:def\mw@normalheading{\def\mw@HeadingBreakBefore{00}}
+>>>
 
 \<mwcls divs\><<<
 \let\mw:sectionx\mw@sectionx
