--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -331,39 +331,38 @@ Q>>>
 
 \Chapter{Outline of the Code}
 
+Keeping all the existing copyright messages in this file unchanged,
+hence splitting the text from copyright line.
 
-
-\<TeX4ht copyright\><<<
-%               2009--|the|year|space      TeX Users Group         %
-%                                                        %
-% This work may be distributed and/or modified under the %
-% conditions of the LaTeX Project Public License, either %
-% version 1.3c of this license or (at your option) any   %
-% later version. The latest version of this license is   %
-% in                                                     %
-%   http://www.latex-project.org/lppl.txt                %
-% and version 1.3c or later is part of all distributions %
-% of LaTeX version 2005/12/01 or later.                  %
-%                                                        %
-% This work has the LPPL maintenance status "maintained".%
-%                                                        %
-% This Current Maintainer of this work                   %
-% is the TeX4ht Project <tex4ht@tug.org>.                %
-%                                                        %
-% If you modify this program your changing its signature %
-% with a directive of the following form will be         %
-% appreciated.                                           %
-%            \message{signature}                         %
-%                                                        %
-%                                        tex4ht@tug.org  %
-%                             http://www.tug.org/tex4ht  %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\<TeX4ht license text\><<<
+%                                                        
+% This work may be distributed and/or modified under the 
+% conditions of the LaTeX Project Public License, either 
+% version 1.3c of this license or (at your option) any   
+% later version. The latest version of this license is in
+%   http://www.latex-project.org/lppl.txt                
+% and version 1.3c or later is part of all distributions 
+% of LaTeX version 2005/12/01 or later.                  
+%                                                        
+% This work has the LPPL maintenance status "maintained".
+%                                                        
+% This Current Maintainer of this work                   
+% is the TeX4ht Project <tex4ht@tug.org>.                
+%                                                        
+% If you modify this program, changing the 
+% version identification would be appreciated.
 \immediate\write-1{version |version}
 >>>
 
 
-\<book.4ht\><<<
+\<TeX4ht copyright\><<<
+%               2009--|the|year|space      TeX Users Group
+|<TeX4ht license text|>
+>>>
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
+\<book.4ht\><<<
 % book.4ht                             |version %
 % Copyright (C) |CopyYear.1997.      Eitan M. Gurari         %
 |<TeX4ht copyright|>
@@ -30061,6 +30060,30 @@ with small  shifting.
     \ifnum\@lastruleclass=\z@\vskip \aboverulesep\fi 
     \ifnum0=`{\fi}\@gtempa 
     \o:noalign:{\ifnum0=`}\fi\futurenonspacelet\@tempa\@xcmidrule} 
+>>>
+
+
+%%%%%%%%%%%%%%%%%%%%%
+\Section{tocloft.sty}
+%%%%%%%%%%%%%%%%%%%%%
+
+Just turn off tocloft tables of contents. For details, see
+\Link[http://tex.stackexchange.com/q/190991/2891]{}{} this item on
+TeX.sx\EndLink and the
+\Link[http://puszcza.gnu.org.ua/bugs/?220]{}{}tex4ht bug report\EndLink.
+Contributed by Michal Hoftich.
+
+\<tocloft.4ht\><<<
+% tocloft.4ht (|version), generated from |jobname.tex
+% Copyright |CopyYear.2014. TeX Users Group
+|<TeX4ht license text|>
+|<tocloft.sty|>
+\Hinput{tocloft}
+\endinput
+>>>       \AddFile{9}{tocloft}
+
+\<tocloft.sty\><<<
+\@cftnctoctrue
 >>>
 
 %%%%%%%%%%%%%%%%%%%%%
