--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -335,29 +335,31 @@ Keeping all the existing copyright messages in this file unchanged,
 hence splitting the text from copyright line.
 
 \<TeX4ht license text\><<<
-%                                                        
-% This work may be distributed and/or modified under the 
-% conditions of the LaTeX Project Public License, either 
-% version 1.3c of this license or (at your option) any   
+%
+% This work may be distributed and/or modified under the
+% conditions of the LaTeX Project Public License, either
+% version 1.3c of this license or (at your option) any
 % later version. The latest version of this license is in
-%   http://www.latex-project.org/lppl.txt                
-% and version 1.3c or later is part of all distributions 
-% of LaTeX version 2005/12/01 or later.                  
-%                                                        
+%   http://www.latex-project.org/lppl.txt
+% and version 1.3c or later is part of all distributions
+% of LaTeX version 2005/12/01 or later.
+%
 % This work has the LPPL maintenance status "maintained".
-%                                                        
-% This Current Maintainer of this work                   
-% is the TeX4ht Project <tex4ht@tug.org>.                
-%                                                        
-% If you modify this program, changing the 
+%
+% This Current Maintainer of this work
+% is the TeX4ht Project <tex4ht@tug.org>.
+%
+% If you modify this program, changing the
 % version identification would be appreciated.
 \immediate\write-1{version |version}
 >>>
 
 
+This is prepended to the definition in tex4ht-cpright.tex, hence no need
+to include the above (new) ``TeX4ht license text''.  I don't understand.
+ 
 \<TeX4ht copyright\><<<
-%               2009--|the|year|space      TeX Users Group
-|<TeX4ht license text|>
+%           2009--|the|year|empty TeX Users Group
 >>>
 
 
@@ -31311,10 +31313,9 @@ d|<haddr prefix|>\last:haddr
 
 
 \<listings.4ht\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% listings.4ht                          |version %
-% Copyright (C) |CopyYear.2001.       Eitan M. Gurari         %
-|<TeX4ht copyright|>
+% listings.4ht (|version), generated from |jobname.tex
+% Copyright |CopyYear.2001. Eitan M. Gurari
+|<TeX4ht copywrite|>
 |<listings sty|>
 |<lstmisc sty|>
 \Hinput{listings}
@@ -31323,7 +31324,9 @@ d|<haddr prefix|>\last:haddr
 
 
 \<listings sty\><<<
+\newif\iflstnest
 \append:defII\lst@EnterMode{%
+  \iflstnest\else
   \ifx \lsthk:EveryLine\:UnDef
      \let\lsthk:EveryLine\lsthk@EveryLine
   \fi
@@ -31332,10 +31335,10 @@ d|<haddr prefix|>\last:haddr
              \def\dd:listings{\d:listings\let\dd:listings\empty}}%
   \fi  
   \append:def\lsthk@EveryPar{\dd:listings}%
-  \a:listings\bgroup  
+  \a:listings\fi\bgroup  
   \Configure{$}{}{}{}%
   \aftergroup\lst:EnterMode  }
-\def\lst:EnterMode{\b:listings\egroup}
+\def\lst:EnterMode{\iflstnest\else\b:listings\fi\egroup}
 \NewConfigure{listings}{4}
 \let\dd:listings=\empty
 >>>
@@ -31345,8 +31348,8 @@ content.
 
 
 \<listings sty\><<<
-\append:defI\lst@Init{\csname a:listings-init\endcsname}
-\pend:def\lst@DeInit{\csname b:listings-init\endcsname}
+\append:defI\lst@Init{\csname a:listings-init\endcsname\global\lstnesttrue}
+\pend:def\lst@DeInit{\csname b:listings-init\endcsname\global\lstnestfalse}
 \NewConfigure{listings-init}{2}
 >>>
 
