handle titlesec.sty brackets in arg, http://puszcza.gnu.org.ua/bugs/?215
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@128 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,11 @@
+2014-07-14  Karl Berry  <karl@gnu.org>
+
+	* Makefile (tex4ht_4ht_derived): add titlesec.4ht.
+	(titlesec 2005) <\ttl:straight@i>: use {#2} in case arg contains
+	brackets.  From Michal Hoftich.
+	http://tex.stackexchange.com/q/185866/
+	http://puszcza.gnu.org.ua/bugs/?215
+
 2014-07-13  Karl Berry  <karl@gnu.org>
 
 	* Makefile (tex4ht_4ht_derived): add listings.4ht.
