--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -791,19 +791,13 @@ $\mathfrak{A}a^{\mathfrak{A}}$
 >>>
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%
 \Section{titlesec}
-%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-
-
 
 \<titlesec.4ht\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% titlesec.4ht                          |version %
-% Copyright (C) |CopyYear.2000.       Eitan M. Gurari         %
-|<TeX4ht copyright|>
+% titlesec.4ht (|version), generated from |jobname.tex
+% Copyright |CopyYear.2000. Eitan M. Gurari
+|<TeX4ht copywrite|>
 \ifx \ttl@assign@ii\:Undef 
    \ifx \ttl@sect\:UnDef\else
      |<titlesec pre 2.3.5|>
@@ -818,8 +812,6 @@ $\mathfrak{A}a^{\mathfrak{A}}$
 \Hinput{titlesec}
 \endinput
 >>>                        \AddFile{9}{titlesec}
-
-
 
 \<titlesec since 2.3.5\><<<
 \pend:defII\ttl@useclass{%
@@ -836,10 +828,6 @@ $\mathfrak{A}a^{\mathfrak{A}}$
 \let\ttl@endlongest\@empty
 >>>
 
-
-
-
-
 \<titlesec pre 2.3.5\><<<
 \pend:defII\ttl@sect{%
   \@ifstar {}{\SkipRefstepAnchor}}
@@ -849,9 +837,6 @@ $\mathfrak{A}a^{\mathfrak{A}}$
   \ttl:select{#1}{#2}{#3}{#4}{#5}}
 \let\ttl@write|=\:gobbleIII
 >>>
-
-
-
 
 \<shared titlesec\><<<
 \let\ttlh:hang|=\ttlh@hang
@@ -868,8 +853,6 @@ $\mathfrak{A}a^{\mathfrak{A}}$
    \:seccntformat{#1}\fi}
 >>>
 
-
-
 \<titlesec 2005\><<<
 \let\ttl:straight@i\ttl@straight@i
 \def\ttl@straight@i#1[#2]#3{%
@@ -878,7 +861,7 @@ $\mathfrak{A}a^{\mathfrak{A}}$
      |<skip extra sec and subsec toc|>%
   \fi
   \edef\sc:tp{\ifttl@label\else like\fi #1}%
-  \ttl:straight@i{#1}[#2]{#3}%
+  \ttl:straight@i{#1}[{#2}]{#3}%
 }
 \def\ttlh@hang#1#2#3#4#5#6#7#8{%
    \def\c:secnumdepth{\@nameuse{ttll@\sc:tp}}%
@@ -893,7 +876,6 @@ $\mathfrak{A}a^{\mathfrak{A}}$
 }
 \HLet\ttl@select\:tempc
 >>>
-
 
 \<skip extra sec and subsec toc\><<<
 \def\:temp{#1}\edef\:tempa{\expandafter
@@ -910,7 +892,6 @@ $\mathfrak{A}a^{\mathfrak{A}}$
 \fi
 >>>
 
-
 \<titlesec for nameref\><<<
 \gdef\NR:Title{\a:newlabel{#3}}%
 >>>
@@ -921,7 +902,6 @@ $\mathfrak{A}a^{\mathfrak{A}}$
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \Section{Scientific Word}
-%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \Link[ftp://ftp.mackichan.com/]{}{}mackichan\EndLink,
 \Link[http://cutter.ship.edu/\string
@@ -31307,9 +31287,8 @@ d|<haddr prefix|>\last:haddr
 
 
 
-%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%
 \Section{listings}
-%%%%%%%%%%%%%%%%%%%
 
 
 \<listings.4ht\><<<
