fix spellcheck typos, inspired by http://puszcza.gnu.org.ua/bugs/?223
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@131 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/doc/tex4ht-configure1.tex
+++ b/doc/tex4ht-configure1.tex
@@ -209,7 +209,7 @@ and \verb+\begin{document}+ of a local configuration file.
 
    Some built-in configurations of \texht require an argument for the
    \Verb=<unit-name>HMark= commands. For safety, these commands should
-   always be followed by a, possiblely empty, argument.  The argument
+   always be followed by a (possibly empty) argument.  The argument
    should be a separator between the title mark and its content.
 
    \Example
