--- a/doc/tex4ht-mcol.tex
+++ b/doc/tex4ht-mcol.tex
@@ -62,7 +62,7 @@ are listed below:
 \item \texttt{\textbackslash{}flushcolumns}: balanced columns
 \item \texttt{\textbackslash{}raggedcolumns}: unbalanced columns
 \item \texttt{\textbackslash{}begin\{multicols\}\{<num>\}}: beginning of
-        multicolumn enviromnemt
+        multicolumn environment
 \item \texttt{\textbackslash{}end\{multicols\}}: end of multicolumn environment
 \item \texttt{\textbackslash{}multicoltolerance}: no effect on HTML output
 \end{enumerate}
@@ -92,7 +92,7 @@ below:
 \Configure{columngap}{\the\columnsep}
 \end{verbatim}
 \texttt{columngap} will default to the dimension provided by
-\texttt{multicol}'s \texttt{\textbackslash{}columsep}
+\texttt{multicol}'s \texttt{\textbackslash{}columnsep}
 command. However, if you want to override, you can make use of the
 above command. The legal values admissible are any valid
 \texttt{dimen} or simply \texttt{normal} which is considered to be
