--- a/doc/tex4ht-options.tex
+++ b/doc/tex4ht-options.tex
@@ -80,7 +80,7 @@
 %\item[core]
 
 \item[css-in] the inline \css code will be extracted from the input of
-  the previous compilation, so an extra compilaion might be needed for
+  the previous compilation, so an extra compilation might be needed for
   this option to make it effective.
 
 \item[css2] for \css2 code.
@@ -267,7 +267,7 @@
 
 \item[pic-cases] for pictorial cases environment.
 
-\item[pic-eqalign] for pictorial equalign environment.
+\item[pic-eqalign] for pictorial eqalign environment.
 
 \item[pic-eqnarray] for pictorial eqnarray.
 
@@ -275,7 +275,7 @@
 
 \item[pic-fbox] for pictorial or bitmapped fbox'es.
 
-\item[pic-framebox] for bitmap fameboxes.
+\item[pic-framebox] for bitmap frameboxes.
 
 \item[pic-longtable] for bitmapped longtable.
 
@@ -296,7 +296,7 @@
 
 \item[pic-tabular] use this option for pictorial tabular.
 
-\item[plain-] for scaled down implimentation.
+\item[plain-] for scaled down implementation.
 
 % \item[pmathml-css]
 
