--- a/doc/tex4ht-annotated-source.tex
+++ b/doc/tex4ht-annotated-source.tex
@@ -196,7 +196,7 @@ etc. Not a big deal. The text indent has been suppressed through
 another \verb'.css' declaration, as the indent can interfere with
 lettrine spacing. 
     
-Our custom configuation ends here if you do not want to make use of
+Our custom configuration ends here if you do not want to make use of
 the free web font, namely, EB Garamond created by
 \hlink{http://www.georgduffner.at/ebgaramond/impressum.html}{Georg
   Duffner} and distributed under
@@ -257,7 +257,7 @@ respectively.  Following command can be invoked from terminal:
   mzlatex test my ' -cunihtf'
 \end{verbatim}
 
-The synatax is 
+The syntax is 
 \begin{verbatim}
   script <tex-file> <conf-file> '<options-for-t4ht>'
 \end{verbatim}
