spurious comma in css, https://puszcza.gnu.org.ua/bugs/?232
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@132 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,9 @@
+2014-10-28   Michal Hoftich  <michal.h21@gmail.com>
+
+	* tex4ht-html4.tex: Spurious comma in css selector causes CSS
+	validation error.
+	https://puszcza.gnu.org.ua/bugs/index.php?232
+
 2014-10-10  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* tex4ht-c.tex: Avoid compiler warning [-Wunused-value].
