--- a/lit/tex4ht-html4.tex
+++ b/lit/tex4ht-html4.tex
@@ -4,8 +4,8 @@
 % Copy html4.4ht into the work directory before each of the 
 %            first two compilations
 %
-% Copyright (C) 2009-2010, 2014 TeX Users Group
-% Copyright (C) 1996-2009 Eitan M. Gurari
+% Copyright 2009-2014 TeX Users Group
+% Copyright 1996-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -8771,7 +8771,7 @@ The hbox is for avoiding the start of a new paragraph, if in vmode.
                                          {margin-left:0em;}}
 \Css{
 .likesubsectionToc \string~ .subsubsectionToc,    
-.subsectionToc     \string~ .subsubsectionToc,  
+.subsectionToc     \string~ .subsubsectionToc  
                                          {margin-left:2em;}}
 >>>
 
