remove spurious ; from \textregistered output (from Michal)
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@133 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,4 +1,12 @@
-2014-10-28   Michal Hoftich  <michal.h21@gmail.com>
+2015-01-19  Michal Hoftich  <michal.h21@gmail.com>
+
+	* tex4ht-html4.tex,
+	* tex4ht-unicode.tex: remove spurious semicolon produced by
+	\textregistered command.
+	http://puszcza.gnu.org.ua/bugs/?242
+	http://tex.stackexchange.com/questions/223804/tex4ht-textregistered-and-an-unwanted-semicolon
+
+2014-10-28 Michal Hoftich  <michal.h21@gmail.com>
 
 	* tex4ht-html4.tex: Spurious comma in css selector causes CSS
 	validation error.
