--- a/lit/tex4ht-html4.tex
+++ b/lit/tex4ht-html4.tex
@@ -4,7 +4,7 @@
 % Copy html4.4ht into the work directory before each of the 
 %            first two compilations
 %
-% Copyright 2009-2014 TeX Users Group
+% Copyright 2009-2015 TeX Users Group
 % Copyright 1996-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -20653,7 +20653,7 @@ users redefine the latter macro.
 >>>
 
 \<configure html4 latex\><<<
-\def\:tempc{\special{t4ht@+\string&{35}xAE{59}}x;}
+\def\:tempc{\special{t4ht@+\string&{35}xAE{59}}x}
 \HLet\textregistered\:tempc
 >>>
 
