--- a/lit/tex4ht-unicode.tex
+++ b/lit/tex4ht-unicode.tex
@@ -1,7 +1,7 @@
 % $Id$
 % latex tex4ht-unicode   or   xhlatex tex4ht-unicode "html,3,sections+"
 %
-% Copyright (C) 2009-2011 TeX Users Group
+% Copyright (C) 2009-2015 TeX Users Group
 % Copyright (C) 1998-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -1233,7 +1233,7 @@ The following symbols have mathrel settings.
 
 
 \<configure unicode latex\><<<
-\def\:tempc{\special{t4ht@+\string&{35}xAE{59}}x;}
+\def\:tempc{\special{t4ht@+\string&{35}xAE{59}}x}
 \HLet\textregistered\:tempc
 >>>
 
