introduce manually-maintained html4.4ht-released for tex4ht-html4.tex compilation
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@134 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,10 @@
+2015-01-23  Karl Berry  <karl@gnu.org>
+
+	* html4.4ht-released: new file, copied from current TL.
+	* Makefile (tex4ht_html4_derived): enable, and intersperse
+	copying of html4.4ht-released to html4.4ht with latex runs,
+	per comments at top of file.  No significant differences remain.
+
 2015-01-19  Michal Hoftich  <michal.h21@gmail.com>
 
 	* tex4ht-html4.tex,
