generate {html4-l2-url,html4-russian-accents}.4ht as separate files since they have different encodings
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@135 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,10 @@
+2015-01-26  Michal Hoftich <michal.h21@gmail.com> and Karl Berry <karl@gnu.org>
+
+	* tex4ht-html4.tex: generate {html4-l2-url,html4-russian-accents}.4ht
+	as separate files, to avoid having html4.4ht with multiple encodings,
+	which lualatex does not like to read.
+	* Makefile (tex4ht_html4_derived): add the new files.
+
 2015-01-23  Karl Berry  <karl@gnu.org>
 
 	* html4.4ht-released: new file, copied from current TL.
