--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -225,7 +225,7 @@
 
 \def\CopyYear.#1.{%
    \ifnum #1=\year #1\space\space\space\space\space\space
-    \else          #1--2009\fi
+    \else          #1-2009\fi
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -359,7 +359,7 @@ This is prepended to the definition in tex4ht-cpright.tex, hence no need
 to include the above (new) ``TeX4ht license text''.  I don't understand.
  
 \<TeX4ht copyright\><<<
-%           2009--|the|year|empty TeX Users Group
+% Copyright 2009-|the|year|empty TeX Users Group
 >>>
 
 
@@ -24202,9 +24202,8 @@ Note: we should distinguish between
 
 
 % \<frenchb.4ht\><<<
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% % frenchb.4ht                           |version %
-% % Copyright (C) |CopyYear.2001.       Eitan M. Gurari         %
+% % frenchb.4ht (|version), generated from |jobname.tex
+% % Copyright |CopyYear.2001. Eitan M. Gurari
 % |<TeX4ht copyright|>
 % |<declare frenchb shorthand|>
 % |<frenchb nbsp|>
@@ -24329,9 +24328,8 @@ Note: we should distinguish between
 %  spaces instead of one.=
 
 \<frenchb.4ht\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% frenchb.4ht                           |version %
-% Copyright (C) |CopyYear.2001.       Eitan M. Gurari         %
+% frenchb.4ht (|version), generated from |jobname.tex
+% Copyright |CopyYear.2001. Eitan M. Gurari
 |<TeX4ht copyright|>
 |<declare frenchb shorthand|>
 |<frenchb nbsp|>
@@ -30046,7 +30044,7 @@ Contributed by Michal Hoftich.
 
 \<tocloft.4ht\><<<
 % tocloft.4ht (|version), generated from |jobname.tex
-% Copyright |CopyYear.2014. TeX Users Group
+% Copyright 2014-2015 TeX Users Group
 |<TeX4ht license text|>
 |<tocloft.sty|>
 \Hinput{tocloft}
